--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
     background-size: cover;
     left: 0;
     top: 0;
-    height: 800px;
+    height: 100%;
     width: 100%;
     background-position: center;
 }
@@ -64,9 +64,9 @@
 
 .hero-section h1 {
     color: #fff;
-    font-size: 90px;
+    font-size: 8vw;
     text-transform: uppercase;
-    line-height: 80px;
+    line-height: 1.3;
 }
 
 span {
@@ -75,7 +75,8 @@ span {
 
 .icon {
     text-align: right;
-    margin-top: 12rem;
+    margin-top: 6rem;
+    display: flex;
 }
 
 .icon a {
@@ -83,7 +84,16 @@ span {
     border-radius: 50%;
     color: #fff;
     font-size: 30px;
-    padding: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 40px;
+    height: 40px;
+    text-decoration: none;
+}
+
+.icon a+a{
+    margin-left: 10px;
 }
 
 button.btn {
@@ -114,4 +124,216 @@ button.btn:before {
 button.btn:hover:before {
     left: 0;
     z-index: 1;
+}
+
+.nav-toggler {
+    text-align: right;
+    background: transparent;
+    border: none;
+    width: 30px;
+    height: 20px;
+    margin-top: -32px;
+    float: right;
+    cursor: pointer;
+}
+
+button.nav-toggler span {
+    width: 30px;
+    height: 2px;
+    background: #ddd;
+    position: absolute;
+    margin-left: -23px;
+}
+
+button.nav-toggler span:before {
+    width: 30px;
+    height: 2px;
+    background: #ddd;
+    position: absolute;
+    left: 0;
+    top: 8px;
+    content: "";
+}
+
+button.nav-toggler span:after {
+    width: 30px;
+    height: 2px;
+    background: #ddd;
+    position: absolute;
+    left: 0;
+    top: -8px;
+    content: "";
+}
+
+footer{
+    position: absolute;
+    bottom: 10px;
+    right: 20px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* Responsive style */
+
+@media only screen and (min-width: 992px) {
+
+    .main-menu ul li a:last-child{
+        width: 40px;
+        height: 40px;
+    }
+	
+    .main-menu ul li a{
+        padding: 10px 10px;
+    }
+    .nav-toggler{
+        display: none;
+    }
+	
+}
+
+/*		Tablet Layout: 768px.
+		Gutters: 24px.
+		Outer margins: 28px.
+		Inherits styles from: Default Layout.
+-----------------------------------------------------------------
+cols    1     2      3      4      5      6      7      8
+px      68    160    252    344    436    528    620    712    */
+
+@media only screen and (min-width: 768px) and (max-width: 991px) {
+	.main-menu ul li a{
+        padding: 6px 5px;
+        font-size: 16px;
+    
+    }
+
+    .main-menu ul li+li{
+        padding-top: 15px ;
+    }
+
+    .main-menu ul{
+        width: 100%;
+    }
+    
+    .nav-toggler{
+        
+        margin-top: 14px;
+    }
+    .main-menu ul li {
+        display: block;
+    }
+    
+    .main-menu ul {
+        margin-top: 47px;
+    }
+    .nav-toggler {
+        margin-top: -200px;
+    }
+	
+}
+
+
+
+/*		Mobile Layout: 320px.
+		Gutters: 24px.
+		Outer margins: 34px.
+		Inherits styles from: Default Layout.
+---------------------------------------------
+cols    1     2      3
+px      68    160    252    */
+
+@media only screen and (max-width: 767px) {
+	
+	.main-menu ul li a{
+        padding: 6px 5px;
+        font-size: 16px;
+    
+    }
+    .main-menu ul{
+        width: 100%;
+    }
+
+    .icon {
+        margin-top: 7rem;
+    }
+
+    .icon a{
+        padding: 5px;
+        font-size: 20px;
+    }
+    .main-menu ul li {
+        display: block;
+    }
+    .nav-toggler {
+        margin-top: -190px;
+    }
+    
+	
+}
+
+
+
+/*		Wide Mobile Layout: 480px.
+		Gutters: 24px.
+		Outer margins: 22px.
+		Inherits styles from: Default Layout, Mobile Layout.
+------------------------------------------------------------
+cols    1     2      3      4      5
+px      68    160    252    344    436    */
+
+@media only screen and (min-width: 480px) and (max-width: 767px) {
+	
+	.main-menu ul li a{
+        padding: 6px 5px;
+        font-size: 16px;
+    
+    }
+    
+    .icon {
+        margin-top: 14rem;
+    }
+    .main-menu ul li {
+        display: block;
+    }
+    
+    .main-menu ul {
+        margin-top: 10px;
+    }
+    .nav-toggler {
+        margin-top: -197px;
+    }
+
+}
+
+/*	Retina media query.
+	Overrides styles for devices with a 
+	device-pixel-ratio of 2+, such as iPhone 4.
+-----------------------------------------------    */
+
+@media 
+	only screen and (-webkit-min-device-pixel-ratio: 2),
+	only screen and (min-device-pixel-ratio: 2) {
+	
+	
 }
